<resources>
    <string name="app_name">Test-Task</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="login">Login</string>
    <string name="enter_name">Enter Name</string>
    <string name="password">Password</string>
    <string name="login_button">login</string>
    <string name="main_info">Main Info</string>
    <string name="role_id">Role ID</string>
    <string name="default_string">default</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="permissions">Permissions</string>
    <string name="logout">logout</string>
</resources>