<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AuthActivity">

    <TextView
        android:text = "@string/login"
        android:layout_width="match_parent"
        android:layout_height = "wrap_content"
        android:textSize = "35sp"
        android:textAlignment="center"
        android:layout_margin="20dp"/>

    <EditText
        android:id = "@+id/usernameText"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/enter_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_margin="20dp"/>

</LinearLayout>