<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:layout_margin="10dp">

            <Button
                android:id="@+id/logoutButton"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_margin="20dp"/>

        </TableRow>

        <TableRow android:layout_margin="10dp">

            <TextView
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/role_id"/>

            <TextView
                android:layout_weight="1"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/roleIdText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_string"/>

        </TableRow>

        <TableRow android:layout_margin="10dp">

            <TextView
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <TextView
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:id="@+id/usernameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_string"/>

        </TableRow>

        <TableRow android:layout_margin="10dp">

            <TextView
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"/>

            <TextView
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:id="@+id/emailText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_string"/>

        </TableRow>

        <TableRow android:layout_margin="10dp">

            <TextView
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permissions"/>

        </TableRow>

        <TableRow android:layout_margin="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/permissionRecycler"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </TableRow>

    </TableLayout>

</FrameLayout>